Fixed svg not showing up

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,8 +138,7 @@ body {
   padding: 0;
   margin: 5px;
   border: none;
-  /* background-color: transparent; */
-  background-color: peru;
+  background-color: transparent;
 }
 #main-button img {
   width: 50px;
